# phidgetcxx

./: CMakeLists.txt
include/: catch.hpp
include/phidgetcxx/: channel_class.h  channel_subclass.h  common.h  device_class.h  device_id.h  error_event_code.h  exception.h  manager.h  phidget.h  phidget_fwd.h  phidgetcxx.h  retained_phidget.h  retained_phidget_fwd.h  return_code.h  static.h
src/: channel_class.cpp  channel_subclass.cpp  common.cpp  device_class.cpp  device_id.cpp  error_event_code.cpp  exception.cpp  globals.cpp  globals.h  locked_ref.hpp  phidget.cpp  retained_phidget.cpp  return_code.cpp  static.cpp
test/: phidget.cpp  return_code.cpp
